k8s/prod/scarcity-deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: scarcity-app
spec:
  replicas: 2
  template:
    metadata:
      name: scarcity-template
      labels:
        app: scarcity
    spec:
      containers:
      - name: scarcity-container
        image: $REPO:$COMMIT
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
        ports:
        - name: scarcity-port
          containerPort: 80
        resources:
          requests:
            cpu: 0
