k8s/prod/postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name: $PGHOST
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: pg
