k8s/prod/redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: $REDIS_HOST
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
