k8s/prod/scarcity-service.yml
kind: Service
apiVersion: v1
metadata:
  name: scarcity-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: scarcity
