k8s/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scarcity-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "scarcity-ip"
spec:
  rules:
  - host: $DOMAIN
    http:
      paths:
      - path: /*
        backend:
          serviceName: scarcity-service
          servicePort: 80
